Edited docs/index.md and added write-up on postfix notation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -Wshadow -Wunused")
 #LENGYEL
 #MERGE_SORT
 
-add_compile_definitions(MERGE_SORT)
+add_compile_definitions(MERGE_SORT) # <- Írd ide
 
 file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/ *.cpp *.hpp *.h *.c)
 
